BasicMTLAST is now built by the parser rules using a visitor in a separate project named BasicMtlAntlr2BasicMtlAstJava Visitor(s) for the produced AST will be ready soon...
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@12 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtlAntlr2BasicMtlAstJava/.classpath
+++ b/BasicMTL_projects/BasicMtlAntlr2BasicMtlAstJava/.classpath
@@ -4,5 +4,7 @@
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
     <classpathentry kind="src" path="/BasicMtlAntlr"/>
     <classpathentry kind="src" path="/BasicMtlAstJava"/>
+    <classpathentry kind="src" path="/BasicMtl_Transformation_libraries"/>
+    <classpathentry kind="lib" path="ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
