--- a/BasicMTL_projects/BasicMtlAntlr2TLLJava/.classpath
+++ b/BasicMTL_projects/BasicMtlAntlr2TLLJava/.classpath
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
     <classpathentry kind="src" path="src"/>
-    <classpathentry kind="src" path="build/src"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-    <classpathentry kind="lib" path="ThirdParty/ANTLR/antlrfull.jar"/>
-    <classpathentry kind="lib" path="ThirdParty/junit/junit.jar"/>
+    <classpathentry kind="src" path="/BasicMtlAntlr"/>
+    <classpathentry kind="src" path="/BasicMtlAntlr2BasicMtlAstJava"/>
+    <classpathentry kind="src" path="/BasicMtlAstJava"/>
+    <classpathentry kind="src" path="/BasicMtlTLLJava"/>
     <classpathentry kind="lib" path="ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
