--- a/BasicMTL_projects/BasicMtlAntlr/build.xml
+++ b/BasicMTL_projects/BasicMtlAntlr/build.xml
@@ -1,6 +1,6 @@
-<!-- $Id: build.xml,v 1.2 2003-08-05 12:39:40 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.3 2003-08-07 14:46:33 dvojtise Exp $ -->
 <!-- to make this build script work you need to add antlrfull.jar in the windows>preferences>ant>runtime -->
-<project name="BasicMtlAntlr" default="compile_java" basedir=".">
+<project name="BasicMtlAntlr" default="dist" basedir=".">
 	<description>
         Build file for the Antlr Parser
 	</description>
