--- a/BasicMTL_projects/BasicMtlAstJava/build.xml
+++ b/BasicMTL_projects/BasicMtlAstJava/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.2 2003-08-08 11:44:12 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.3 2003-08-08 13:55:23 dvojtise Exp $ -->
 <project name="BasicMtlAstJava" default="dist" basedir=".">
 	<description>
         Known directories for the BAsicMtlAST
@@ -31,11 +31,16 @@
             notree="false" nonavbar="false" noindex="false"
             splitindex="true" author="true" version="true"
             nodeprecatedlist="false" nodeprecated="false"
-            packagenames="ASTTopDownVisitor"
-            sourcepath="src"
+            packagenames="ASTTopDownVisitor,org.irisa.triskell.MT.BasicMTL.BasicMTLAST.Java"
             classpath="bin" doctitle="Basic MTL ASTJava internal Documentation">
             <link href="http://www.junit.org/junit/javadoc/3.8.1/index.htm"/>
-            <link href="file:/T"/>
+            
+    		<sourcepath>
+	    		<dirset dir="">
+	        		<include name="src/**"/>
+	        		<include name="srcOfp/**"/>
+	      		</dirset>
+            </sourcepath>
         </javadoc>
 	</target>
 	<target name="create_jar" depends="compile_java"
@@ -64,7 +69,9 @@
 		description="create a distibution">
 		<mkdir dir="${dist}"/>
 	</target>
-	
+	<target name="redist" depends="clean" description="clean then dist">
+		<antcall target="dist"/>    
+	</target>
   	<target name="clean_srcOfp"
   		description="before a simple Obecjeteering generation it is sometime easier to remove all generated java files but leave the CVS directories">
   		<delete >
