*** empty log message ***
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@52 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/.project
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/.project
@@ -3,6 +3,8 @@
 	<name>BasicMtl_Transformation_libraries</name>
 	<comment></comment>
 	<projects>
+		<project>MTDataTypes</project>
+		<project>RepositoryAPI</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
