--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/.classpath
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/.classpath
@@ -2,5 +2,7 @@
 <classpath>
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+    <classpathentry kind="src" path="/MTDataTypes"/>
+    <classpathentry kind="src" path="/RepositoryAPI"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
