moved to utils project
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@53 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtlAntlr2TLLJava/.classpath
+++ b/BasicMTL_projects/BasicMtlAntlr2TLLJava/.classpath
@@ -3,9 +3,10 @@
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
     <classpathentry kind="src" path="/BasicMtlAntlr"/>
-    <classpathentry kind="src" path="/BasicMtlAntlr2BasicMtlAstJava"/>
-    <classpathentry kind="src" path="/BasicMtlAstJava"/>
     <classpathentry kind="src" path="/BasicMtlTLLJava"/>
     <classpathentry kind="lib" path="ThirdParty/log4j/log4j.jar"/>
+    <classpathentry kind="src" path="/BasicMtlAntlr2BasicMtlAstJava"/>
+    <classpathentry kind="src" path="/BasicMtlAstJava"/>
+    <classpathentry kind="src" path="/Utils"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
