--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/src/SimpleSamples/Vehicules/build.xml
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/src/SimpleSamples/Vehicules/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.3 2003-08-08 16:11:10 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.1 2003-08-08 16:43:08 jpthibau Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="vehicule_antlr2tll" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
@@ -6,7 +6,7 @@
 	<!-- set global properties for this build -->
 	<property name="src" location="./src"/>
 	<property name="bin" location="../../../bin/SimpleSamples"/>
-	<property name="build" location="../../../build/SimpleSamples"/>
+	<property name="build" location="../../../build/SimpleSamples/Vehicules"/>
 
 	<target name="init">
     	<!-- Create the time stamp -->
@@ -30,7 +30,7 @@
          <arg value="-TLLPath"/> 
          <arg value="${build}/src/"/> 
          <arg value="-PackageName"/> 
-         <arg value="SimpleSamples.vehicules_Inheritance.bin.Vehicule"/> 
+         <arg value="SimpleSamples.Vehicules.src.java.Vehicule"/> 
        </java>
  
 	</target>
@@ -61,7 +61,7 @@
          <arg value="-TLLPath"/> 
          <arg value="${build}/src/"/> 
          <arg value="-PackageName"/> 
-         <arg value="SimpleSamples.vehicules_Inheritance.bin.Aquatique"/> 
+         <arg value="SimpleSamples.Vehicules.src.java.Aquatique"/> 
        </java>
  
 	</target>
@@ -92,7 +92,7 @@
          <arg value="-TLLPath"/> 
          <arg value="${build}/src/"/> 
          <arg value="-PackageName"/> 
-         <arg value="SimpleSamples.vehicules_Inheritance.bin.Terrestre"/> 
+         <arg value="SimpleSamples.Vehicules.src.java.Terrestre"/> 
        </java>
  
 	</target>
@@ -123,7 +123,7 @@
          <arg value="-TLLPath"/> 
          <arg value="${build}/src/"/> 
          <arg value="-PackageName"/> 
-         <arg value="SimpleSamples.vehicules_Inheritance.bin.Amphibie"/> 
+         <arg value="SimpleSamples.Vehicules.src.java.Amphibie"/> 
        </java>
  
 	</target>
@@ -154,7 +154,7 @@
          <arg value="-TLLPath"/> 
          <arg value="${build}/src/"/> 
          <arg value="-PackageName"/> 
-         <arg value="SimpleSamples.vehicules_Inheritance.bin.Amphibieherite"/> 
+         <arg value="SimpleSamples.Vehicules.src.java.Amphibieherite"/> 
        </java>
  
 	</target>
@@ -185,7 +185,7 @@
          <arg value="-TLLPath"/> 
          <arg value="${build}/src/"/> 
          <arg value="-PackageName"/> 
-         <arg value="SimpleSamples.vehicules_Inheritance.bin.Caracteristiques"/> 
+         <arg value="SimpleSamples.Vehicules.src.java.Caracteristiques"/> 
        </java>
  
 	</target>
@@ -216,7 +216,7 @@
          <arg value="-TLLPath"/> 
          <arg value="${build}/src/"/> 
          <arg value="-PackageName"/> 
-         <arg value="SimpleSamples.vehicules_Inheritance.bin.Testvehicules"/> 
+         <arg value="SimpleSamples.Vehicules.src.java.Testvehicules"/> 
        </java>
  
 	</target>
