--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/src/SimpleSamples/Vehicules/build.xml
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/src/SimpleSamples/Vehicules/build.xml
@@ -1,12 +1,12 @@
-<!-- $Id: build.xml,v 1.1 2003-08-08 16:43:08 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.2 2003-08-09 16:43:20 jpthibau Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="vehicule_antlr2tll" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
 	</description>
 	<!-- set global properties for this build -->
 	<property name="src" location="./src"/>
-	<property name="bin" location="../../../bin/SimpleSamples"/>
-	<property name="build" location="../../../build/SimpleSamples/Vehicules"/>
+	<property name="bin" location="../../../bin"/>
+	<property name="build" location="../../../build"/>
 
 	<target name="init">
     	<!-- Create the time stamp -->
