--- a/BasicMTL_projects/MTDataTypes/.classpath
+++ b/BasicMTL_projects/MTDataTypes/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-    <classpathentry kind="src" path="src"/>
-    <classpathentry kind="src" path="srcOfp"/>
+    <classpathentry excluding="**/CVS/*" kind="src" path="src"/>
+    <classpathentry excluding="**/CVS/*" kind="src" path="srcOfp"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
     <classpathentry kind="src" path="/Utils"/>
     <classpathentry kind="lib" path="/Utils/ThirdParty/JUnit/junit.jar"/>
