--- a/RepositoryDriver_projects/RepositoryAPI/.classpath
+++ b/RepositoryDriver_projects/RepositoryAPI/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-    <classpathentry kind="src" path="src"/>
-    <classpathentry kind="src" path="srcOfp"/>
+    <classpathentry excluding="**/CVS/*" kind="src" path="src"/>
+    <classpathentry excluding="**/CVS/*" kind="src" path="srcOfp"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
     <classpathentry kind="src" path="/MTDataTypes"/>
     <classpathentry kind="src" path="/Utils"/>
