--- a/BasicMTL_projects/BasicMtlAntlr/.classpath
+++ b/BasicMTL_projects/BasicMtlAntlr/.classpath
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
     <classpathentry kind="src" path="src"/>
-    <classpathentry kind="src" path="build/src"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
     <classpathentry kind="lib" path="ThirdParty/ANTLR/antlrfull.jar"/>
-    <classpathentry kind="lib" path="ThirdParty/junit/junit.jar"/>
-    <classpathentry kind="lib" path="ThirdParty/log4j/log4j.jar"/>
+    <classpathentry kind="src" path="/Utils"/>
+    <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
