--- a/BasicMTL_projects/BasicMtlAntlr/build.xml
+++ b/BasicMTL_projects/BasicMtlAntlr/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.3 2003-08-07 14:46:33 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.4 2003-08-12 14:51:05 ffondeme Exp $ -->
 <!-- to make this build script work you need to add antlrfull.jar in the windows>preferences>ant>runtime -->
 <project name="BasicMtlAntlr" default="dist" basedir=".">
 	<description>
@@ -7,35 +7,43 @@
 	<!-- set global properties for this build -->
 	<property name="src" location="src"/>
 	<property name="bin" location="bin"/>
-	<property name="build" location="build"/>
 	<property name="dist"  location="dist"/>
+	
+	<!-- This project depends on the Utils project -->
+	<property name="Utils"  location="..\Utils"/>
 
 	<target name="init">
     	<!-- Create the time stamp -->
     	<tstamp/>
 	    <!-- Create the build directory structure used by compile -->
-    	<mkdir dir="${build}"/>
-	    <mkdir dir="${build}/src"/>
-    	<mkdir dir="${build}/src/ANTLRParser"/>
 	    <mkdir dir="${bin}"/>
 	    <mkdir dir="${dist}"/>
 	    <mkdir dir="${dist}/bin"/>
+	    <delete file="${src}/ANTLRParser/BasicmtlLexer.java"/>
+	    <delete file="${src}/ANTLRParser/BasicmtlParser.java"/>
+	    <delete file="${src}/ANTLRParser/BasicmtlParserTokenTypes.java"/>
+	    <delete file="${src}/ANTLRParser/BasicmtlParserTokenTypes.txt"/>
+	    
+	    <!-- This project depends on the Utils project -->
+	    <echo>Building the "Utils" project.</echo>
+	    <ant antfile="${Utils}\build.xml" dir="${Utils}" target="dist" inheritAll="false"/>
+	    <echo>"Utils" project built.</echo>
 	</target>
 
 	<target name="compile_antlr" depends="init"
   	 	description="compile the antlr grammar to java files ">
 	 	<antlr 
     		target="${src}/ANTLRParser/basicmtl.g"
-	    	outputdirectory="build/src/ANTLRParser"	        
+	    	outputdirectory="${src}/ANTLRParser"	        
 		/> 
 	</target>
   
 	<target name="compile_java" depends="init,compile_antlr"
         description="compile the source " >
-    	<!-- Compile the java code from ${src};${build}\src into ${bin} -->
-	    <javac srcdir="${src};${build}\src" 
+    	<!-- Compile the java code from ${src} into ${bin} -->
+	    <javac srcdir="${src}" 
     	    destdir="${bin}"
-   			classpath=".;ThirdParty\ANTLR\antlrfull.jar;ThirdParty\junit\junit.jar;ThirdParty\log4j\log4j.jar"/>
+   			classpath=".;${Utils}\bin;ThirdParty\ANTLR\antlrfull.jar;..\Utils\ThirdParty\log4j\log4j.jar"/>
 	</target>
   	<target name="full_javadoc" 
   		description="create a full javadoc document that describes all the classes of the project">
@@ -44,24 +52,24 @@
             splitindex="true" author="true" version="true"
             nodeprecatedlist="false" nodeprecated="false"
             packagenames="ANTLRASTWalker,ANTLRParser"
-            sourcepath="build\src;src"
-            classpath="bin;ThirdParty\ANTLR\antlrfull.jar;ThirdParty\junit\junit.jar;ThirdParty\log4j\log4j.jar" doctitle="Basic MTL ANTLR Parser internal Documentation">
+            sourcepath="src"
+            classpath="bin;${Utils}\bin;ThirdParty\ANTLR\antlrfull.jar;..\Utils\ThirdParty\log4j\log4j.jar" doctitle="Basic MTL ANTLR Parser internal Documentation">
             <link href="http://www.junit.org/junit/javadoc/3.8.1/index.htm"/>
             <link href="file:/T:/Soft/multiplatform/Java_lib/log4j/jakarta-log4j-1.2.8/docs/api/"/>
         </javadoc>
 	</target>
 	<target name="create_jar" depends="compile_java"
 		description="create the jar file">
-		<jar destfile="${dist}/bin/BasicMtlAntlr.jar">
+		<jar destfile="${dist}/bin/${ant.project.name}.jar">
 			<!-- files to include in the jar -->
 			<fileset dir="${bin}"/>
 			<!-- manifest to include -->
 		    <manifest>
 		    	<attribute name="Built-By" value="${user.name}"/>   
 		    	<attribute name="Main-Class" value="ANTLRParser.BMTLParser"/>
-				<attribute name="Class-Path" value="log4j.jar junit.jar antlrfull.jar"/>
-		    	<section name="BasicMTLAntlr">
-		      		<attribute name="Specification-Title" value="BasicMTLAntlr"/>
+				<attribute name="Class-Path" value="Utils.jar ThirdParty/ANTLR/antlrfull.jar ThirdParty/log4j/log4j.jar"/>
+		    	<section name="${ant.project.name}">
+		      		<attribute name="Specification-Title" value="${ant.project.name}"/>
       				<attribute name="Specification-Version" value="${TSTAMP} ${TODAY}"/>
       				<attribute name="Specification-Vendor" value="Irisa/Triskell"/>
       				<attribute name="Implementation-Title" value="common"/>
@@ -74,36 +82,32 @@
 	<target name="dist" depends="create_jar"
 		description="create a distibution">
 		<mkdir dir="${dist}"/>
-	    <mkdir dir="${dist}/bin/ThirdParty/log4j"/>
-	    <copy file="ThirdParty/log4j/log4j_configuration"
-	    	todir="${dist}/bin/ThirdParty/log4j"/>
-	    <copy file="../Utils/ThirdParty/log4j/log4j.jar"
-	    	todir="${dist}/bin"/>
-	    <copy file="../Utils/ThirdParty/junit/junit.jar"
-	    	todir="${dist}/bin"/>
-	    <copy file="ThirdParty/ANTLR/antlrfull.jar"
-	    	todir="${dist}/bin"/>
+		<!-- This project depends on the Utils project -->
+		<copy todir="${dist}/bin">
+			<fileset dir="${Utils}\dist\bin"/>
+		</copy>
+		
+	    <copy file="log4j_configuration.xml"
+	    	todir="${dist}/bin"
+	    	overwrite="true"/>
+	    <copy todir="${dist}/bin/ThirdParty/ANTLR">
+	    	<fileset dir="ThirdParty/ANTLR"/>
+	    </copy>
+	    
+		<!-- There is no need of junit-->
+		<delete dir="${dist}/bin/ThirdParty/JUnit"/>
 	</target>
   	<target name="clean"
         description="clean up" >
-    	<!-- Delete the ${build}, {$bin} and ${dist} directory trees -->
-    	<delete dir="${bin}"/>    
-    	<delete >
-    		<fileset dir="${build}/src">
-  				<include name="**/*"/>
-			</fileset>    		
-    	</delete>
+    	<!-- Delete the {$bin} and ${dist} directory trees -->
+    	<delete dir="${bin}"/>
     	<delete dir="${dist}"/> 
   	</target>
-  	<target name="echo eclipse data">
-  		<echo>
-  			${toto}
-  			${dist}
-  			${working_set}
-  			${container}
-  			${project}
-  			${resource}
-  			${workspace}
-  		</echo>
-  	</target>
+
+  	<target name="deep_clean" depends="clean"
+        description="deep clean up (including depending projects)" >
+	    
+	    <!-- This project depends on the Utils project -->
+	    <ant antfile="${Utils}\build.xml" dir="${Utils}" target="deep_clean" inheritAll="false"/>
+    </target>
 </project>
