--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/build.xml
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.2 2003-08-06 15:47:33 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.3 2003-08-12 14:50:00 ffondeme Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="verif_SimpleUML2RDBMS_V1_syntax" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
@@ -8,6 +8,20 @@
 	<property name="bin" location="bin"/>
 	<property name="build" location="build"/>
 	<property name="dist"  location="dist"/>
+	
+	<!-- The necessary libraries compilation prrocess -->
+	<property name="lang" location="src/lang"/>
+	
+	<!-- This project depends on the MDRDriver, TLLTypeChecker and BasicMtlJavaCodeGenerator projects -->
+	<property name="MDRDriver"  location="..\MDRDriver"/>
+	<property name="TLLTypeChecker"  location="..\TLLTypeChecker"/>
+	<property name="BasicMtlJavaCodeGenerator"  location="..\BasicMtlJavaCodeGenerator"/>
+	<!-- Deep dependencies does not need to be managed -->
+	
+	
+	<!-- The compilation tools -->
+	<property name="ANTLR2TLL" location="..\TLLTypeChecker\dist\bin\TLLTypeChecker.jar"/>
+	<property name="TLL2Java" location="..\BasicMtlJavaCodeGenerator\dist\bin\BasicMtlJavaCodeGenerator"/>
 
 	<target name="init">
     	<!-- Create the time stamp -->
@@ -18,9 +32,11 @@
 	    <mkdir dir="${bin}"/>
 	    <mkdir dir="${dist}"/>
 	    <mkdir dir="${dist}/bin"/>
+	    
+	    <ant antfile="${build.lang}/build.xml" dir="${build.lang}" target="compile Standard"/>
 	</target>
 	
-	<target name="SimpleSample_antlr2tll" depends="init"
+	<target name="SimpleSample_antlr2tll_old" depends="init"
   	 	description="Compile Simple sample with vehicules to a TLL">
 	 	<java jar="../BasicMtlAntlr/dist/bin/BasicMtlAntlr.jar" 
            fork="true"
@@ -54,16 +70,49 @@
        </java>
  
 	</target>
+	
+	<target name="SimpleSample_java2class" depends="SimpleSample_tll2java"
+  	 	description="Compile TLL Simple sample with vehicules to a Java">
+  	 	<javac>
+  	 	</javac>
+  	</target>
+	
   
 	<target name="clean"
         description="clean up" >
     	<!-- Delete the ${build}, {$bin} and ${dist} directory trees -->
     	<delete dir="${bin}"/>    
-    	<delete >
+    	<delete failonerror="false">
     		<fileset dir="${build}/src">
   				<include name="**/*"/>
 			</fileset>    		
     	</delete>
     	<delete dir="${dist}"/> 
+  	</target>
+  	
+  	<target name="compile_BasicMTL"
+  		description="Compiles necessary libraries (if needed)">
+	    
+		<!-- This project depends on the MDRDriver, TLLTypeChecker and BasicMtlJavaCodeGenerator projects -->
+	    <echo>Building the "MDRDriver" project.</echo>
+	    <ant antfile="${MDRDriver}\build.xml" dir="${MDRDriver}" target="dist" inheritAll="false"/>
+	    <echo>"MDRDriver" project built.</echo>
+	    <echo>Building the "TLLTypeChecker" project.</echo>
+	    <ant antfile="${TLLTypeChecker}\build.xml" dir="${TLLTypeChecker}" target="dist" inheritAll="false"/>
+	    <echo>"TLLTypeChecker" project built.</echo>
+	    <echo>Building the "BasicMtlJavaCodeGenerator" project.</echo>
+	    <ant antfile="${BasicMtlJavaCodeGenerator}\build.xml" dir="${BasicMtlJavaCodeGenerator}" target="dist" inheritAll="false"/>
+	    <echo>"BasicMtlJavaCodeGenerator" project built.</echo>
+  	</target>
+  	
+  	<target name="recompile_BasicMTL"
+  		description="Completely recompiles necessary libraries">
+	    
+		<!-- This project depends on the MDRDriver, TLLTypeChecker and BasicMtlJavaCodeGenerator projects -->
+	    <ant antfile="${MDRDriver}\build.xml" dir="${MDRDriver}" target="deep_clean" inheritAll="false"/>
+	    <ant antfile="${TLLTypeChecker}\build.xml" dir="${TLLTypeChecker}" target="deep_clean" inheritAll="false"/>
+	    <ant antfile="${BasicMtlJavaCodeGenerator}\build.xml" dir="${BasicMtlJavaCodeGenerator}" target="deep_clean" inheritAll="false"/>
+	    
+	    <ant target="compile_BasicMTL"/>
   	</target>
 </project>
