--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/src/SimpleSamples/Vehicules/build.xml
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/src/SimpleSamples/Vehicules/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.2 2003-08-09 16:43:20 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.3 2003-08-12 14:49:59 ffondeme Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="vehicule_antlr2tll" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
@@ -38,7 +38,7 @@
 	<target name="compile vehicule" depends="vehicule_antlr2tll"
   	 	description="Generate code for vehicule.mtl">
 	    <mkdir dir="${build}/src/java/Vehicule"/>
-	 	<java jar="../../../../BasicMtlJavaCodeGenerator/dist/bin/TLLCodeGenerator.jar" 
+	 	<java jar="../../../../BasicMtlJavaCodeGenerator/dist/bin/BasicMtlJavaCodeGenerator.jar" 
            fork="true"
            failonerror="true"
            >
